--- a/paginas.html
+++ b/paginas.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <custom-header></custom-header>
-  <main id="app">
-    <h1>Páginas</h1>
-    <div id="paginas-list"></div>
+  <main class="large-padding large-margin center-align" id="app">
+    <h1  class="small center-align">Páginas</h1>
+    <div class="grid large-padding" id="paginas-list"></div>
   </main>
   <custom-footer></custom-footer>
   <script src="./paginas.js" type="module"></script>
